--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,9 @@
     "angular": "1.2.x",
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
-    "angular-mocks": "~1.2.x"
+    "angular-mocks": "~1.2.x",
+    "lodash": "~2.4.1",
+    "ionic": "~0.9.27"
   },
   "appPath": "app"
 }
