--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
     "lodash": "~2.4.1",
-    "ionic": "~0.9.27"
+    "ionic": "~0.9.27",
+    "angular-nvd3": "~0.0.9"
   },
   "appPath": "app"
 }
