--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "time-grunt": "^0.3.1"
   },
   "scripts": {
-    "postinstall": "bower install",
+    "postinstall": "./node_modules/bower/bin/bower install",
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1",
     "pretest": "npm install"
