--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angulard3",
   "private": true,
   "version": "0.0.0",
-  "devDependencies": {
+  "dependencies": {
     "bower": "^1.3.1",
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
